--- a/src/app/facilities/facilities.page.html
+++ b/src/app/facilities/facilities.page.html
@@ -6,10 +6,10 @@
       <ion-icon name="home-sharp"></ion-icon>
       Home
     </ion-tab-button>
-    <ion-tab-button tab="programmes">
+    <!-- <ion-tab-button tab="programmes">
       <ion-icon name="create-sharp"></ion-icon> Programmes
-    </ion-tab-button>
-    <ion-tab-button tab="stock-reports">
+    </ion-tab-button> -->
+    <ion-tab-button tab="facilitystockreports">
       <ion-icon name="bar-chart-sharp"></ion-icon> Stock Reports
     </ion-tab-button>
     <ion-tab-button tab="profile">
