--- a/src/app/inventory-form/inventory-form.page.scss
+++ b/src/app/inventory-form/inventory-form.page.scss
@@ -39,13 +39,29 @@ button[type="submit"]:hover {
 
 }
 
-ion-content {
-  --background: #d9d9d9;
+.floating-label {
+  margin-left: 15px;
+  font-size: 1em;
+  color: #333;
 }
 
-ion-item {
-  --background: #d9d9d9;
-  height: 25px;
+.mandatory {
+  color: #9e1c25;
+}
+
+.input-container {
+  margin-bottom: 15px;
+  margin-left: 15px;
+  --padding-start: 0; 
+  --inner-padding-end: 0; 
+}
+
+.bordered-input {
+  border: 1px solid #050101;
+  border-radius: 4px;
+  padding: 8px;
+  box-sizing: border-box;
+  width: 100%;
 }
 
 .input-box {
@@ -68,4 +84,14 @@ ion-item {
 ion-label {
   font-weight: bolder;
  
+}
+
+.large-textarea {
+  height: 150x; /* Adjust the height as needed */
+  border: 1px solid #050101;
+  border-radius: 4px;
+  font-size: 20px;
+  padding: 8px; /* Add padding for better text readability */
+  box-sizing: border-box; /* Ensure padding and border are included in height and width */
+  width: 100%; /* Make the textarea take the full width of its container */
 }
