--- a/src/app/inventory-item/inventory-item.page.html
+++ b/src/app/inventory-item/inventory-item.page.html
@@ -1,31 +1,141 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>Inventory Details</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>Inventory</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="goBack()">
+        <ion-icon name="arrow-back"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button>
+        <ion-icon name="search"></ion-icon>
+      </ion-button>
+      <ion-button>
+        <ion-icon name="notifications-outline"></ion-icon>
+      </ion-button>
+      <ion-button>
+        <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <div *ngIf="inventoryDataForm">
-    <!-- Display facility name and date -->
-    <div style="display: flex; justify-content: space-between;">
-      <div>{{ inventoryDataForm.get('facilityName')?.value }}</div>
-      <div>{{ inventoryDataForm.get('date')?.value }}</div>
-    </div>
-    
-    <!-- Table to display program and inventory status -->
-    <table>
-      <thead>
-        <tr>
-          <th>Programme</th>
-          <th>Status</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>{{ inventoryDataForm.get('programmeName')?.value }}</td>
-          <td>{{ inventoryDataForm.get('inventoryStatusName')?.value }}</td>
-        </tr>
-      </tbody>
-    </table>
+<ion-content [scrollY]="false">
+  <div class="fixed-header">
+    <ion-card class="expand">
+      <ion-card-header>
+        <ion-col>
+          <ion-card-title>{{ facilityName }}</ion-card-title>
+        </ion-col>
+        <ion-col class="ion-text-end date-col">
+          <ion-card-title>{{ currentDate | date: 'MMMM-yyyy' }}</ion-card-title>
+        </ion-col>
+      </ion-card-header>
+    </ion-card>
+
+    <ion-card class="expanded-card">
+      <ion-card-header>
+        <ion-row>
+          <ion-col>
+            <ion-card-title>{{ programmeName }}</ion-card-title>
+          </ion-col>
+          <ion-col class="ion-text-end date-col">
+            <ion-card-title class="re">Re-Supply Period: 3 Months</ion-card-title>
+            <ion-button (click)="printPage()" shape="round" size="small" class="print-button">Print</ion-button>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <span class="details-info">
+            Please enter your details below <span class="primary-color">*</span>Marked items are mandatory
+          </span>
+        </ion-row>
+        <ion-row>
+          <ion-col size="6">
+            <ion-select [(ngModel)]="selectedMonth" placeholder="Reporting Month"
+              [ngClass]="{'warning': !selectedMonth && showWarning}">
+              <ion-select-option *ngFor="let month of months" [value]="month.value">
+                {{ month.name }}
+              </ion-select-option>
+            </ion-select>
+          </ion-col>
+          <ion-col size="6">
+            <ion-select [(ngModel)]="selectedYear" placeholder="Reporting Year"
+              [ngClass]="{'warning': !selectedYear && showWarning}">
+              <ion-select-option *ngFor="let year of years" [value]="year">
+                {{ year }}
+              </ion-select-option>
+            </ion-select>
+          </ion-col>
+        </ion-row>
+        <ion-row *ngIf="!selectedMonth || !selectedYear">
+          <ion-col>
+            <p class="warning-text">Please select both the reporting month and year to proceed.</p>
+          </ion-col>
+        </ion-row>
+      </ion-card-header>
+    </ion-card>
   </div>
+</ion-content>
+<ion-content>
+  <ion-card *ngIf="displayDrugs">
+    <div *ngFor="let drug of drugs" class="drug-container">
+      <ion-card class="custom-card">
+        <ion-card-content>
+          <div class="header-container">
+            <h3 class="drug-name">{{ drug.drugName }} </h3>
+            <ion-button (click)="createInventory(drug.drugId)" shape="round" size="small" class="change-button">
+              Change
+            </ion-button>
+          </div>
+          <table class="table">
+            <tbody>
+              <tr>
+                <td class="bold-text">Beginning balance: {{ drug.inventory.beginningBalance || '0' | number:'1.2-2' }}
+                </td>
+                <td>Months of Stock: {{drug.inventory.monthsOfStock || '0' | number:'1.2-2' }}</td>
+              </tr>
+              <tr>
+                <td>Received: {{ drug.inventory.received || '0' | number:'1.2-2' }}</td>
+                <td>Dispatched KEMSA: {{ drug.inventory.dispatchedKEMSA || '0' | number:'1.2-2' }}</td>
+              </tr>
+              <tr>
+                <td>Dispensed: {{ drug.inventory.dispensed || '0' | number:'1.2-2' }}</td>
+                <td>AMC: {{ drug.inventory.averageMonthlyConsumption || '0' | number:'1.2-2' }}</td>
+              </tr>
+              <tr>
+                <td>Losses: {{ drug.inventory.losses || '0' | number:'1.2-2' }}</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Positive Adj: {{ drug.inventory.positiveAdjustment || '0' | number:'1.2-2' }}</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Negative Adj: {{ drug.inventory.negativeAdjustment || '0' | number:'1.2-2' }}</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Days Out Of Stock: {{ drug.inventory.daysOutOfStock || '0' | number:'1.2-2' }}</td>
+                <td>Adj. Consumption: {{ drug.inventory.adjustmentConsumption || '0' | number:'1.2-2' }}</td>
+              </tr>
+              <tr>
+                <td class="bold-text">Ending balance: {{ drug.inventory.endingBalance || '0' | number:'1.2-2' }}</td>
+                <td>Comp. Ending balance: {{ drug.inventory.computedEndingBalance || '0' | number:'1.2-2' }}</td>
+              </tr>
+              <tr>
+                <td>Quantity Requested: {{ drug.inventory.quantityRequested || '0' | number:'1.2-2' }}</td>
+                <td>Quantity to Order: {{ drug.inventory.quantityToOrder || '0' | number:'1.2-2' }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </ion-card-content>
+      </ion-card>
+    </div>
+    <p><i>Quantity Requested is Different from Quantity Dispatched by KEMSA</i></p>
+    <p><i>Quantity Dispensed is less than AMC * 1.5</i></p>
+
+    <ion-button expand="block" type="submit" style="margin-top: 25px;">Submit</ion-button>
+  </ion-card>
+
+
 </ion-content>
