--- a/src/app/programmes/programmes.page.html
+++ b/src/app/programmes/programmes.page.html
@@ -1,34 +1,74 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
-    <ion-title style="text-align: center;">Programmes</ion-title>
+    <ion-title>Programme Summary</ion-title>
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
         <ion-icon name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <!-- <ion-button>
+      <ion-button (click)="toggleSearchBar()">
         <ion-icon name="search"></ion-icon>
       </ion-button>
-      <ion-button>
-        <ion-icon name="notifications-outline"></ion-icon>
-      </ion-button> -->
-      <ion-button>
+      <ion-button (click)="goToNotifications()">
+        <ion-icon name="notifications-outline" class="notification-icon"></ion-icon>
+        <span class="badge" *ngIf="newNotificationsCount > 0">{{ newNotificationsCount }}</span>
+      </ion-button>
+      <ion-button (click)="toggleMenu()">
         <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
+  <ion-toolbar *ngIf="showSearchBar" color="light">
+    <ion-searchbar [(ngModel)]="searchQuery" (ionInput)="filterFacilities()"></ion-searchbar>
+  </ion-toolbar>
 </ion-header>
+<ion-content [fullscreen]="true">
 
-<ion-content>
-  <ion-list lines="full">
-    <ion-item>
-      <ion-label>Programme</ion-label>
-      <ion-label slot="end">Status</ion-label>
-    </ion-item>
-    <ion-item *ngFor="let programme of programmes">
-      <ion-label>{{ programme.programmeName }}</ion-label>
-      <ion-label slot="end" [color]="getStatusColor(programme.active)">{{ programme.active }}</ion-label>
-    </ion-item>
-  </ion-list>
+  <ion-card>
+    <ion-card-header>
+      <ion-col>
+        <ion-card-title>Family Planning</ion-card-title>
+      </ion-col>
+      <ion-col class="ion-text-end date-col">
+        <ion-card-title>{{ currentDate | date: 'MMMM-yyyy' }}</ion-card-title>
+      </ion-col>
+    </ion-card-header>
+  </ion-card>
+  <ion-card>
+  <ion-card-header>
+    <ion-row class="name">{{subcountyName}}</ion-row>
+  </ion-card-header>
+</ion-card>
+  <ion-card>
+    <ion-card-header>
+      <ion-row>
+
+        <ion-col>
+          <ion-card-title class="heading-bold">Facility</ion-card-title>
+        </ion-col>
+  
+        <ion-col class="ion-text-end">
+          <ion-card-title class="heading-bold" style="margin-right: 30px;">Status</ion-card-title>
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+    <ion-card-content>
+
+      <ion-list>
+        <ion-item *ngFor="let facility of facilities">
+          <ion-label>
+            {{ facility.facilityName }}
+          </ion-label>
+          <ion-label slot="end"> <div class="status-div" [ngClass]="getStatusColor(facility.status)">
+            {{ facility.status }}
+          </div>
+          </ion-label>
+        </ion-item>
+
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+
 </ion-content>
