--- a/src/app/sub-counties/sub-counties.page.html
+++ b/src/app/sub-counties/sub-counties.page.html
@@ -9,7 +9,7 @@
       <ion-icon name="create-sharp"></ion-icon> Programmes
     </ion-tab-button>
     <ion-tab-button tab="stock-reports">
-      <ion-icon name="bar-chart-sharp"></ion-icon> Stock Reports
+      <ion-icon name="bar-chart-sharp"></ion-icon> Stock Summary
     </ion-tab-button>
     <ion-tab-button tab="profile">
       <ion-icon name="settings-sharp"></ion-icon> Settings
