--- a/src/app/login2/login2.page.html
+++ b/src/app/login2/login2.page.html
@@ -37,7 +37,10 @@
       <ion-button style="margin-top: 50px; border-radius: 25px;" expand="block" color="primary" (click)="login()">
         Login
       </ion-button>
-      
+      <!-- <ion-button style="margin-top: 50px; border-radius: 25px;" expand="block" color="primary" routerLink="/sub-counties" >
+        Login
+      </ion-button>
+       -->
     
     </div>
 
