--- a/src/app/national/national.page.html
+++ b/src/app/national/national.page.html
@@ -1,23 +1,8 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="primary">
-    <ion-title>National</ion-title>
-    <ion-buttons slot="end">
-      <ion-button>
-        <ion-icon name="search"></ion-icon>
-      </ion-button>
-      <ion-button>
-        <ion-icon name="notifications-outline"></ion-icon>
-      </ion-button>
-      <ion-button>
-        <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header> 
+
 <ion-content [fullscreen]="true">
     <ion-tabs>
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="home">
+      <ion-tab-button tab="nationalhome">
         <ion-icon name="home-sharp"></ion-icon>
         Home
       </ion-tab-button>
@@ -27,9 +12,9 @@
       <ion-tab-button tab="stock-reports">
         <ion-icon name="bar-chart-sharp"></ion-icon>        Stock Reports
       </ion-tab-button>
-      <ion-tab-button tab="helper">
+      <!-- <ion-tab-button tab="helper">
         <ion-icon name="information-circle-sharp"></ion-icon>        Help
-      </ion-tab-button>
+      </ion-tab-button> -->
       <ion-tab-button tab="profile" >
         <ion-icon name="settings-sharp"></ion-icon>        Settings
       </ion-tab-button>
