--- a/src/global.scss
+++ b/src/global.scss
@@ -147,3 +147,25 @@
     color: var(--ion-color-primary);
     font-size: 24px;
 }
+
+:root {
+  --ion-backdrop-color: #f0f0f0;
+}
+
+.notification-icon {
+    position: relative;
+    font-size: 24px;
+    color: #fff;
+  }
+  
+  .badge {
+    position: absolute;
+    top: -5px;
+    right: -10px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 5px 10px;
+    font-size: 12px;
+  }
+  
